# for_ARTIV_Framework

./: README.md
artiv_nmea_driver/: README.md  README.rst  package.xml
artiv_nmea_driver/src/libnmea_navsat_driver/: driver.py  parser_original.py
artiv_nmea_driver/src/libnmea_navsat_driver/nodes/: nmea_serial_driver.py
artiv_nmea_driver_1.7.1/launch/: nmea_serial_driver.launch
artiv_nmea_driver_1.7.1/src/libnmea_navsat_driver/: __init__.py  driver.py
artiv_nmea_driver_1.7.1/src/libnmea_navsat_driver/nodes/: nmea_serial_driver.py
artiv_osm_formatter/: OSMHandler.py  main.py  readme.md
