<?xml version="1.0"?>
<package format="2">
  <name>artiv_nmea_driver</name>
  <version>1.7.2</version>
  <description>
    Package to parse NMEA strings and publish a very simple GPS message. Does not
    require or use the GPSD deamon.
  </description>

  <maintainer email="jjss52065@gmail.com">Junsang Jace Ryu</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nmea_navsat_driver</url>

  <author email="eric@ericperko.com">Eric Perko</author>
  <author>Steven Martin</author>
  <author email="jjss52065@gmail.com">Junsang Jace Ryu</author>
  <author>Junsang Jace Ryu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>roslint</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- This is a pure Python package, so mark it architecture independent -->
    <architecture_independent/>
  </export>
</package>
